[package]
name = "ip_address"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ip_address"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
env_logger = "0.10.1"
actix-rt = "2.9.0"
serde_json = "1.0.108"
